--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -24,6 +24,9 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" href="/blog">Blog</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active" href="/tasks">Tarefas</a>
               </li>
               <li class="nav-item">
