Update de Fonte e Logo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,10 @@
 <%- include("includes/header"); %>
 
 <div class="container">
-
-    <h3>Página Inicial</h3>
-    
+    <img src="/dinamica/assets/react-logo-D95A746C77-seeklogo.com.png" alt="Sua Logo" class="logo">
+    <h3 class="welcome-message">Bem-vindo à nossa página!</h3>
 </div>
 
 <%- include("includes/footer"); %>
+
+<link rel="stylesheet" type="text/css" href="/dinamica/public/css/index.css">
