--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include("includes/header"); %>
 
-<div class="container">
-    <img src="/dinamica/assets/react-logo-D95A746C77-seeklogo.com.png" alt="Sua Logo" class="logo">
-    <h3 class="welcome-message">Bem-vindo à nossa página!</h3>
-</div>
-
+<body>
+    <div class="container">
+      <img src="/images/logo.png" alt="Sua Logo" class="logo">
+      <p class="welcome-message">Bem-vindo ao nosso site!</p>
+    </div>
+  </body>
 <%- include("includes/footer"); %>
 
-<link rel="stylesheet" type="text/css" href="/dinamica/public/css/index.css">
