--- a/views/tasks/edit.ejs
+++ b/views/tasks/edit.ejs
@@ -22,7 +22,7 @@
           <input type="checkbox" class="form-check-input" id="concluido" name="done" value="1" <%= task.done == 1 ? 'checked' : '' %>>
           <label class="form-check-label" for="concluido">Concluído </label>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="botaoprimario">Salvar</button>
         <a href="/tasks" class="btn btn-secondary">Cancelar</a>
       </form>
     
