--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -20,7 +20,7 @@
           <input type="checkbox" class="form-check-input" id="concluido" name="done" value="1" <%= user.active == 1 ? 'checked' : '' %>>
           <label class="form-check-label" for="concluido">Ativo</label>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="botaoprimario">Salvar</button>
         <a href="/users" class="btn btn-secondary">Cancelar</a>
       </form>
     
