--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -17,7 +17,7 @@
     <h3>Lista de Usuários</h3>
 
     <div>
-        <a type="button" class="btn btn-primary" href="/users/create/">Adicionar Usuário</a>
+        <a type="button" class="botaoprimario" href="/users/create/">Adicionar Usuário</a>
     </div>
     <table class="table">
         <thead>
