--- a/views/tasks/create.ejs
+++ b/views/tasks/create.ejs
@@ -14,7 +14,7 @@
           <label for="descricao" class="form-label">Descrição</label>
           <textarea class="form-control" id="descricao" name="description"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="botaoprimario">Salvar</button>
         <a href="/tasks" class="btn btn-secondary">Cancelar</a>
     </form>
     
