--- a/views/tasks/list.ejs
+++ b/views/tasks/list.ejs
@@ -17,7 +17,7 @@
     <h3>Lista de Tarefas</h3>
 
     <div>
-        <a type="button" class="btn btn-primary" href="/tasks/create/">Adicionar Tarefa</a>
+        <a type="button" class="botaoprimario" href="/tasks/create/">Adicionar Tarefa</a>
     </div>
     <table class="table">
         <thead>
