--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -29,7 +29,7 @@
           <label for="password_confirmation" class="form-label">Confirmar Senha</label>
           <input type="password" class="form-control" id="password_confirmation" name="password_confirmation">
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="botaoprimario">Salvar</button>
         <a href="/users" class="btn btn-secondary">Cancelar</a>
     </form>
     
