--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -30,13 +30,13 @@
         </thead>
         <tbody>
             <% for(const user of users) { %>
-            <tr class="<%= user.done == 1 ? 'concluido' : '' %>">
+            <tr class="<%= user.active == 0 ? 'concluido' : '' %>">
                 <td><%= user.name %></td>
                 <td><%= user.email %></td>
                 <td><%= user.active ? "Sim" : "Não" %></td>
                 <td>
                     <form action="/users/update-status/<%= user.id %>" method="POST" style="display: inline-block" onsubmit="return confirmar('Mudar status da tarefa?')">
-                        <input type="hidden" name="done" value="<%= user.done %>">
+                        <input type="hidden" name="done" value="<%= user.active %>">
                         <button type="submit" class="btn btn-warning">Status</button>
                     </form>
                     <a type="button" class="btn btn-success" href="/users/edit/<%= user.id %>">Editar</a>
