--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,59 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    
     <footer class="footer">
-        <h1>Footer</h1>
+
+        <div id="footer_content">
+            <div class="imagem">
+                <img src="images\logo.png" alt="logo">
+            </div>
+
+            <ul class="footer-list">
+                <li>
+                    <h3>CONTACTS</h3> 
+                </li>
+
+                <li>
+                    <p>123-456-7890</p>
+                </li>
+                <li>
+                    <p>info@presson.com</p>
+                </li>
+
+
+            <div id="social_media">
+                <p>
+                    <i class="fa-brands fa-twitter"></i>
+                </p>
+
+                <p>
+                    <i class="fa-brands fa-facebook"></i>
+                </p>
+
+                <p>
+                    <i class="fa-brands fa-instagram"></i>
+                </p>
+            </div>
+            </ul>
+
+            <ul class="footer-list">
+                <li> 
+                    <h3>ADRESS</h3> 
+                </li>
+                <li>
+                    <p>123 your street name,</p>
+                </li>
+                <li>
+                    <p>City name, country, post code</p>
+                </li>
+            </ul>
+
+
+        </div>
+
+    </div>
+
+
     </footer>
 
 </body>
