--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,16 @@
+
 <%- include("includes/header"); %>
 
 <body>
-    <div class="container">
-      <img src="/images/logo.png" alt="Sua Logo" class="logo">
-      <p class="welcome-message">Bem-vindo ao nosso site!</p>
-    </div>
-  </body>
-<%- include("includes/footer"); %>
+  <div class="centralized-container">
+    <img src="/images/logo.png" alt="Sua Logo" class="logo">
+    <p class="welcome-message">Bem-vindo ao nosso site!</p>
+  </div>
+  
+  <!-- Outros conteúdos da página -->
+  <div class="other-content">
+    <!-- Conteúdo adicional aqui -->
+  </div>
+</body>
 
+<%- include("includes/footer"); %>
