--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -23,8 +23,6 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/blog">Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/tasks">Tarefas</a>
@@ -35,6 +33,11 @@
               <li class="nav-item">
                 <a class="nav-link active" href="/sobre">Sobre</a>
               </li>
+               <li class="nav-item">
+                <a class="nav-link active" href="/admin/blog-posts/list">Gerenciamento do Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/client/blog-posts/list">Blog</a>
             </ul>
           </div>
         </div>
