[#86a3n7t4x] Problema ao mudar o status do usuário usando o formulário
Correção das variaveis e ajuste do EJS de usuários

➖ remove unnecessary console.log()

🎨 improve button hover style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,11 @@
     transition: background-color 0.3s; /* Transição suave para a cor de fundo */
 }
 
+.botaoprimario:hover {
+    background-color: #17a673;
+    color: white;
+}
+
 
 /* Estilização do footer */
 .footer-list {
