--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -17,7 +17,8 @@
             <input type="text" class="form-control" id="email" name="email" value="<%= user.email %>">
         </div>
         <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="concluido" name="done" value="1" <%= user.active == 1 ? 'checked' : '' %>>
+          <input type="checkbox" class="form-check-input" id="concluido" name="active" value="1" <%= user.active == "1" ? 'checked' : '' %>>
+
           <label class="form-check-label" for="concluido">Ativo</label>
         </div>
         <button type="submit" class="botaoprimario">Salvar</button>
