--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,22 @@
 
 .container {
     min-height: calc(100vh - 56px - 100px);
-    padding: 50px;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome-wrapper {
+    padding-top: 45px;
+    padding-inline: 45px;
+    background-color: rgba(0, 0, 0, 0.702);
+    border-radius: 10px;
+
+    color: white;
+    text-align: center;
 }
 
 .footer {
