--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,10 @@
 
 <div class="container">
 
-    <h3>Página Inicial</h3>
+    <div class="welcome-wrapper">
+        <h3>Seja Bem-vindo(a)!</h3>
+        <img src="images\logo.png" alt="logo">
+    </div>
     
 </div>
 
