[#86a3mmv1q:1] Adicionar a página inicial uma mensagem de boas vindas ao sistema e uma imagem representando a logomarca da empresa
🐛 fix .container div style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,8 +32,18 @@
 }
 
 .container {
-    min-height: calc(100vh - 56px - 100px);
     width: 100%;
+    padding: 50px;
+    min-height: calc(100vh - 56px - 100px);
+    
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.welcome-container {
+    width: 100%;
+    flex: 1;
 
     display: flex;
     flex-direction: column;
