--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,11 @@
 
 <div class="container">
 
-    <div class="welcome-wrapper">
-        <h3>Seja Bem-vindo(a)!</h3>
-        <img src="images\logo.png" alt="logo">
+    <div class="welcome-container">
+        <div class="welcome-wrapper">
+            <h3>Seja Bem-vindo(a)!</h3>
+            <img src="images\logo.png" alt="logo">
+        </div>
     </div>
     
 </div>
