--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -5,7 +5,7 @@
 
         <div id="footer_content">
             <div class="imagem">
-                <img src="images\logo.png" alt="logo">
+                <img src="/images/logo.png" alt="logo">
             </div>
 
             <ul class="footer-list">
