[#86a3pux7n] No formulário de criação de um BlogPost, ao clicar no botão cancelar, o usuário é encaminhado para uma 'Página não Encontrada'
🐛 fix href

--- a/views/blog-posts/create.ejs
+++ b/views/blog-posts/create.ejs
@@ -30,7 +30,7 @@
           <input type="date" class="form-control" id="published_at" name="published_at">
         </div>
         <button type="submit" class="botaoprimario">Salvar</button>
-        <a href="/blog-posts" class="btn btn-secondary">Cancelar</a>
+        <a href="/admin/blog-posts/list" class="btn btn-secondary">Cancelar</a>
     </form>
     
 </div>
