--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -15,11 +15,11 @@
     <form method="POST" action="/users/save">
         <div class="mb-3">
           <label for="name" class="form-label">Nome</label>
-          <input type="text" class="form-control" id="name" name="name" value="<%= old('username', 'blah1') %>" autofocus>
+          <input type="text" class="form-control" id="name" name="name" autofocus>
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">E-mail</label>
-          <input class="form-control" id="email" name="email" value="<%= old('email', 'blah2') %>">
+          <input class="form-control" id="email" name="email">
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Senha</label>
