feature: adicionei a logo e mensagem bem vindo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 
 <div class="container">
 
-    <h3>Página Inicial</h3>
+    <h3>Bem vindo</h3>
+    <img class="logo" src="/assets/Logo.jpg" alt="Logo">
     
 </div>
 
