--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,12 @@
     padding: 50px;
 }
 
+.logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
 .footer {
     height: 100px;
     background-color: silver;
