--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,13 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.bemvindo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .header {
     height: 150px;
     background-color: tomato;
@@ -33,13 +40,14 @@
 
 .container {
     min-height: calc(100vh - 56px - 100px);
-    padding: 50px;
+    padding: 100px;
 }
 
 .logo {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin-top: 50px;
 }
 
 .footer {
@@ -51,4 +59,5 @@
 .concluido td:not(:last-child) {
     text-decoration-line: line-through;
     text-decoration-thickness: 2px;
+    
 }
