--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 * {
-  box-sizing: border-box;
-  padding: 0px;
-  margin: 0px;
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
 
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-.bemvindo{
+.bemvindo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.container-horizontal {
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+}
+
+.container-horizontal img {
+    width: 200px;
+    margin-top: 20px;
+}
+
+.container-horizontal h3 {
+    font-size: 28px;
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container-horizontal p {
+    font-size: 12px;
+    color: white;
+    margin-bottom: 0px;
 }
 
 .header {
@@ -50,14 +74,27 @@
     margin-top: 50px;
 }
 
+.social {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
+
+.social i {
+    font-size: 18px;
+    color: white;
+}
+
 .footer {
-    height: 100px;
-    background-color: silver;
+    height: 160px;
+    background-color: rgb(59, 59, 59);
     padding: 10px;
 }
 
 .concluido td:not(:last-child) {
     text-decoration-line: line-through;
     text-decoration-thickness: 2px;
-    
+
 }
