--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,34 @@
-    <footer class="footer">
-        <h1>Footer</h1>
-    </footer>
+<footer class="footer">
+    <div class="container-horizontal">
+        <div>
+            <img src="assets/presson.png" alt="logo com o nome presson">
+        </div>
+
+        <div style="margin-left: -60px ;">
+            <h3>Contacts</h3>
+            <p>123-456-7890</p>
+            <p>info@presson.com</p>
+        </div>
+
+        <div>
+            <h3>Address</h3>
+            <p>AV. Adjar Casé, 800</p>
+            <p>Caruaru, PE, 55000-000</p>
+        </div>
+    </div>
+    <div class="social">
+        <a href="x.com" target="_blank">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="facebook.com" target="_blank">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="instagram.com" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+    </div>
+</footer>
 
 </body>
+
 </html>
