--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -1,38 +1,38 @@
 <%- include("includes/header"); %>
 
-<div class="container">
+  <div class="container">
 
-    
+
     <h3>Adicionar Usuário</h3>
     <hr>
-    
-    <% if (typeof error != "undefined") { %>
-    <div class="alert alert-danger" role="alert">
+
+    <% if (typeof error !="undefined" ) { %>
+      <div class="alert alert-danger" role="alert">
         <%= error.message %>
-    </div>
-    <% } %>
+      </div>
+      <% } %>
 
-    <form method="POST" action="/users/save">
-        <div class="mb-3">
-          <label for="name" class="form-label">Nome</label>
-          <input type="text" class="form-control" id="name" name="name" autofocus>
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">E-mail</label>
-          <input class="form-control" id="email" name="email">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Senha</label>
-          <input type="password" class="form-control" id="password" name="password">
-        </div>
-        <div class="mb-3">
-          <label for="password_confirmation" class="form-label">Confirmar Senha</label>
-          <input type="password" class="form-control" id="password_confirmation" name="password_confirmation">
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
-        <a href="/users" class="btn btn-secondary">Cancelar</a>
-    </form>
-    
-</div>
+        <form method="POST" action="/users/save">
+          <div class="mb-3">
+            <label for="name" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="name" name="name" autofocus>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input class="form-control" id="email" name="email">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Senha</label>
+            <input type="password" class="form-control" id="password" name="password">
+          </div>
+          <div class="mb-3">
+            <label for="password_confirmation" class="form-label">Confirmar Senha</label>
+            <input type="password" class="form-control" id="password_confirmation" name="password_confirmation">
+          </div>
+          <button type="submit" class="btn btn-primary btn-custom">Salvar</button>
+          <a href="/users" class="btn btn-secondary">Cancelar</a>
+        </form>
 
-<%- include("includes/footer"); %>
+  </div>
+
+  <%- include("includes/footer"); %>
