--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/blog">Blog</a>
+            <a class="nav-link active" href="/blogs">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="/tasks">Tarefas</a>
