--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -42,13 +42,13 @@
                         </td>
                         <td>
                             <form action="/users/update-status/<%= user.id %>" method="POST"
-                                style="display: inline-block" onsubmit="return confirmar('Mudar status da tarefa?')">
+                                style="display: inline-block" onsubmit="return confirmar('Mudar status do usuário?')">
                                 <input type="hidden" name="done" value="<%= user.done %>">
                                 <button type="submit" class="btn btn-warning">Status</button>
                             </form>
                             <a type="button" class="btn btn-success" href="/users/edit/<%= user.id %>">Editar</a>
                             <form action="/users/remove/<%= user.id %>" method="POST" style="display: inline-block"
-                                onsubmit="return confirmar('Tem certeza que deseja excluir essa tarefa?')">
+                                onsubmit="return confirmar('Tem certeza que deseja excluir esse usuário?')">
                                 <button type="submit" class="btn btn-danger">Excluir</button>
                             </form>
                         </td>
