--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -6,7 +6,6 @@
     <hr>
 
     <form method="POST" action="/users/update">
-      <!-- <input type="hidden" name="_method" value="PUT"> -->
       <input type="hidden" name="id" value="<%= user.id %>">
       <div class="mb-3">
         <label for="nome" class="form-label">Nome</label>
@@ -16,11 +15,13 @@
         <label for="email" class="form-label">E-mail</label>
         <input type="text" class="form-control" id="email" name="email" value="<%= user.email %>">
       </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="concluido" name="done" value="1" <%=user.active==1
+
+      <div class="mb-3 form-check"><input type="hidden" name="done" value="0">
+        <input type="checkbox" class="form-check-input" id="concluido" name="active" value="1" <%=user.active==1
           ? 'checked' : '' %>>
         <label class="form-check-label" for="concluido">Ativo</label>
       </div>
+
       <button type="submit" class="btn btn-primary btn-custom">Salvar</button>
       <a href="/users" class="btn btn-secondary">Cancelar</a>
     </form>
